fix bulb color on mobile

--- a/src/container/Projects/Project/Project.module.css
+++ b/src/container/Projects/Project/Project.module.css
@@ -271,4 +271,7 @@
     .StackTabColored{
         color: var(--main-mobile-color);
     }
+    .Bulb path {
+        fill: var(--main-mobile-color)
+    }
 }
